<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RateActivity"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="77dp"
    tools:layout_editor_absoluteY="121dp">


    <EditText
        android:id="@+id/rmb"
        android:layout_width="match_parent"
        android:layout_height="93dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/rmb_inp_tip"
        android:inputType="numberDecimal" />
    <TextView
        android:id="@+id/rmb_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="45sp"
        android:layout_marginBottom="16dp"
        android:text="@string/rmb_show"
         />

    <Button
        android:id="@+id/btn_dollar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_dollar"
        android:onClick="click"
      />

    <Button
        android:id="@+id/btn_euro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="click"
        android:text="@string/btn_euro" />

    <Button
        android:id="@+id/btn_won"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="click"
        android:text="@string/btn_won" />

    <Button
        android:id="@+id/btn_config"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:onClick="clickOpen"
        android:text="@string/config_lable" />
</LinearLayout>