<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animationCache="false"
    android:background="@drawable/kunkun"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="216dp"
        android:layout_height="68dp"
        android:gravity="center"
        android:text="@string/text2"
        android:textSize="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="130dp" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="290dp"
        android:layout_height="47dp"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="37dp"
        android:layout_marginRight="37dp"
        android:layout_marginBottom="44dp"
        android:ems="10"
        android:hint="请输入你的账号"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumberPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/editTextNumberPassword"
        android:layout_width="284dp"
        android:layout_height="45dp"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:layout_marginBottom="80dp"
        android:ems="10"
        android:hint="请输入你的密码"
        android:inputType="numberPassword"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:text="@string/btn_login"
        app:layout_constraintEnd_toStartOf="@+id/btn_regster"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="563dp" />

    <Button
        android:id="@+id/btn_regster"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/btn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_login"
        tools:layout_editor_absoluteY="563dp" />

</androidx.constraintlayout.widget.ConstraintLayout>